start to fix scroll mode drift problem. Words and lines are not deleted after they are typed, instead of just made invisible. They are deleted 1 letter after completion so that the scroll transition is not interrupted

--- a/DvorakAcademy/logic/main.css
+++ b/DvorakAcademy/logic/main.css
@@ -217,11 +217,15 @@ button:focus {
 
 .prompt {
 	position: relative;
+	left: 0;
 	white-space: nowrap;
 	font-size: 2.3vmax;
 	padding: 0 20vh 0 0;
-	width: 28vmax;
+	width: 100%;
 	color: white;
+}
+
+.smoothScroll {
 	transition: left .1s linear;
 }
 
